unpackaged/main/default/objects/A_DX_Object__c/A_DX_Object__c.object-meta.xml
<CustomObject>
	<description>new</description>
	<label>A DX Object</label>
	<nameField>
		<displayFormat>{0}</displayFormat>
		<label>A DX Object Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>A DX Objects</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>