unpackaged/main/default/objects/A_DX_Object__c/fields/A_new_Date_Field__c.field-meta.xml
<CustomField>
	<fullName>A_new_Date_Field__c</fullName>
	<label>A new Date Field</label>
	<type>Date</type>
</CustomField>