unpackaged/main/default/objects/A_DX_Object__c/fields/A_New_Text_Field__c.field-meta.xml
<CustomField>
	<fullName>A_New_Text_Field__c</fullName>
	<description>My Description</description>
	<externalId>true</externalId>
	<inlineHelpText>My Help Text</inlineHelpText>
	<label>A New Text Field</label>
	<length>255</length>
	<type>Text</type>
	<unique>true</unique>
</CustomField>