unpackaged/main/default/objects/A_DX_Object__c/fields/Additional_Percent__c.field-meta.xml
<CustomField>
	<fullName>Additional_Percent__c</fullName>
	<label>Additional Percent</label>
	<precision>18</precision>
	<scale>0</scale>
	<type>Percent</type>
</CustomField>