unpackaged/main/default/objects/A_DX_Object__c/fields/checktest__c.field-meta.xml
<CustomField>
	<fullName>checktest__c</fullName>
	<businessOwnerUser>billnewss88@mz.com</businessOwnerUser>
	<complianceGroup>HIPAA;GDPR</complianceGroup>
	<defaultValue>false</defaultValue>
	<description>new description</description>
	<inlineHelpText>new help text</inlineHelpText>
	<label>checktest</label>
	<type>Checkbox</type>
</CustomField>