unpackaged/main/default/objects/A_DX_Object__c/fields/glob_picky__c.field-meta.xml
<CustomField>
	<fullName>glob_picky__c</fullName>
	<label>glob_picky</label>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetName>testing</valueSetName>
	</valueSet>
</CustomField>