unpackaged/main/default/objects/A_DX_Object__c/fields/junk__c.field-meta.xml
<CustomField>
	<fullName>junk__c</fullName>
	<label>junk4</label>
	<precision>18</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>