unpackaged/main/default/objects/A_DX_Object__c/fields/Last_text__c.field-meta.xml
<CustomField>
	<fullName>Last_text__c</fullName>
	<label>test_text</label>
	<type>TextArea</type>
</CustomField>