unpackaged/main/default/objects/A_DX_Object__c/fields/linkacct__c.field-meta.xml
<CustomField>
	<fullName>linkacct__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Account</label>
	<referenceTo>Account</referenceTo>
	<relationshipLabel>A DX Objects</relationshipLabel>
	<relationshipName>A_DX_Objects</relationshipName>
	<type>Lookup</type>
</CustomField>