unpackaged/main/default/objects/A_DX_Object__c/fields/myfield__c.field-meta.xml
<CustomField>
	<fullName>myfield__c</fullName>
	<complianceGroup>HIPAA;COPPA</complianceGroup>
	<label>myfield</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>chose bill</fullName>
			</value>
			<value>
				<fullName>chose timf</fullName>
			</value>
			<value>
				<fullName>OWASPfghf</fullName>
			</value>
			<value>
				<fullName>Codeghfg</fullName>
			</value>
			<value>
				<fullName>Testingfghgf</fullName>
			</value>
			<value>
				<fullName>Apexgf</fullName>
			</value>
			<value>
				<fullName>Scangfhgf</fullName>
			</value>
			<value>
				<fullName>Analysisf</fullName>
			</value>
			<value>
				<fullName>Coveragegf</fullName>
			</value>
			<value>
				<fullName>Unitgfghf</fullName>
			</value>
			<value>
				<fullName>Testf</fullName>
			</value>
			<value>
				<fullName>CWEgf</fullName>
			</value>
			<value>
				<fullName>Refactoring</fullName>
			</value>
			<value>
				<fullName>Gateway</fullName>
			</value>
			<value>
				<fullName>Debug</fullName>
			</value>
			<value>
				<fullName>Debugging</fullName>
			</value>
			<value>
				<fullName>Static</fullName>
			</value>
			<value>
				<fullName>Coverage</fullName>
			</value>
			<value>
				<fullName>PMDghf</fullName>
			</value>
			<value>
				<fullName>DMLfghf</fullName>
			</value>
			<value>
				<fullName>Classfg</fullName>
			</value>
			<value>
				<fullName>Impact Analysigfh</fullName>
			</value>
			<value>
				<fullName>Conflict Resolutionfg</fullName>
			</value>
			<value>
				<fullName>Repositoryj</fullName>
			</value>
			<value>
				<fullName>SFDXkj</fullName>
			</value>
			<value>
				<fullName>Branch Managementl</fullName>
			</value>
			<value>
				<fullName>Version Controlkj</fullName>
			</value>
			<value>
				<fullName>DevOpskl</fullName>
			</value>
			<value>
				<fullName>Sprintdfd</fullName>
			</value>
			<value>
				<fullName>User Storyd</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>