unpackaged/main/default/objects/A_DX_Object__c/fields/New_Date_Field__c.field-meta.xml
<CustomField>
	<fullName>New_Date_Field__c</fullName>
	<label>New Date Field</label>
	<type>Date</type>
</CustomField>