unpackaged/main/default/objects/A_DX_Object__c/fields/newone__c.field-meta.xml
<CustomField>
	<fullName>newone__c</fullName>
	<label>newone</label>
	<length>200</length>
	<type>Text</type>
</CustomField>