unpackaged/main/default/objects/A_DX_Object__c/fields/test_formula__c.field-meta.xml
<CustomField>
    <fullName>test_formula__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test formula</label>
    <type>Text</type>
</CustomField>