unpackaged/main/default/objects/A_DX_Object__c/fields/zelastone__c.field-meta.xml
<CustomField>
	<fullName>zelastone__c</fullName>
	<label>zelastone</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>One Value</fullName>
			</value>
			<value>
				<fullName>Two Value</fullName>
			</value>
			<value>
				<fullName>Three Value</fullName>
			</value>
			<value>
				<fullName>Four Value</fullName>
			</value>
			<value>
				<fullName>Five Value</fullName>
			</value>
			<value>
				<fullName>One</fullName>
				<label>One Label</label>
			</value>
			<value>
				<fullName>Two</fullName>
				<label>Two Label</label>
			</value>
			<value>
				<fullName>Three</fullName>
				<label>Three Label</label>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>