unpackaged/main/default/objects/A_DX_Object__c/listViews/Test_Queue_A_DX_Object.listView-meta.xml
<ListView>
	<fullName>Test_Queue_A_DX_Object</fullName>
	<filterScope>Queue</filterScope>
	<label>Test Queue</label>
	<queue>Test_Queue</queue>
	<sharedTo>
		<allInternalUsers/>
	</sharedTo>
</ListView>